added: push notification deregister endpoint
