# classes/PleioRest/Controllers/User.php
@@ -155,7 +155,6 @@ class User {
         return $response->withStatus(301)->withHeader('Location', $redirect_url);
     }
 
-
     /**
      * @SWG\Post(
      *     path="/api/users/me/register_push",
@@ -165,17 +164,25 @@ class User {
      *     description="Register an application to receive push notifications of activities.",
      *     produces={"application/json"},
      *     @SWG\Parameter(
-     *         name="token",
+     *         name="service",
      *         in="query",
-     *         description="The token received from Google Cloud Messaging (GCM) or Apple Push Notification Gateway Service (APNS).",
+     *         description="The service (gcm or apns)",
      *         required=true,
      *         type="string",
      *         @SWG\Items(type="string")
      *     ),
      *     @SWG\Parameter(
-     *         name="service",
+     *         name="device_id",
      *         in="query",
-     *         description="The service (gcm or apns)",
+     *         description="The unique device ID.",
+     *         required=true,
+     *         type="string",
+     *         @SWG\Items(type="string")
+     *     ),
+     *     @SWG\Parameter(
+     *         name="token",
+     *         in="query",
+     *         description="The token received from Google Cloud Messaging (GCM) or Apple Push Notification Gateway Service (APNS).",
      *         required=true,
      *         type="string",
      *         @SWG\Items(type="string")
@@ -203,5 +210,52 @@ class User {
 
         $handler = new \PleioRest\Services\PushNotificationHandler;
         $handler->addSubscription(elgg_get_logged_in_user_entity(), $accessData['client_id'], $service, $device_id, $token);
+    }
+
+    /**
+     * @SWG\Post(
+     *     path="/api/users/me/deregister_push",
+     *     security={{"oauth2": {"all"}}},
+     *     tags={"user"},
+     *     summary="Deregister application for push notifications.",
+     *     description="Deregister an application to receive push notifications of activities.",
+     *     produces={"application/json"},
+     *     @SWG\Parameter(
+     *         name="service",
+     *         in="query",
+     *         description="The service (gcm or apns)",
+     *         required=true,
+     *         type="string",
+     *         @SWG\Items(type="string")
+     *     ),
+     *     @SWG\Parameter(
+     *         name="device_id",
+     *         in="query",
+     *         description="The token received from Google Cloud Messaging (GCM) or Apple Push Notification Gateway Service (APNS).",
+     *         required=true,
+     *         type="string",
+     *         @SWG\Items(type="string")
+     *     ),
+     *     @SWG\Response(
+     *         response=200,
+     *         description="Succesful operation."
+     *     )
+     * )
+     */
+    public function deregisterPush($request, $response, $args) {
+        $factory = new \PleioRest\AuthenticationServerFactory();
+        $server = $factory->getServer();
+        $accessData = $server->getAccessTokenData(\OAuth2\Request::createFromGlobals());
+
+        $vars = $request->getParsedBody();
+        $service = $vars['service'];
+        $device_id = $vars['device_id'];
+
+        if (!in_array($service, array('gcm', 'apns'))) {
+            return $response->withStatus(404);
+        }
+
+        $handler = new \PleioRest\Services\PushNotificationHandler;
+        $handler->removeSubscription(elgg_get_logged_in_user_entity(), $accessData['client_id'], $service, $device_id);
     }
 }
