# classes/PleioRest/Services/PushNotificationHandler.php
@@ -63,8 +63,19 @@ class PushNotificationHandler {
         $device_id = mysql_real_escape_string($device_id);
         $token = mysql_real_escape_string($token);
 
-        delete_data("DELETE FROM {$this->dbprefix}push_notifications_subscriptions WHERE user_guid = {$user->guid} AND device_id = \"{$device_id}\"");
+        // remove old tokens from the user with the specific device
+        delete_data("DELETE FROM {$this->dbprefix}push_notifications_subscriptions WHERE client_id = \"{$client_id}\" AND service = \"{$service}\" AND device_id = \"{$device_id}\" AND user_guid = \"{$user->guid}\"");
+
+        // remove subscription of the specific device_id and token (user change)
+        delete_data("DELETE FROM {$this->dbprefix}push_notifications_subscriptions WHERE client_id = \"{$client_id}\" AND service = \"{$service}\" AND device_id = \"{$device_id}\" AND token = \"{$token}\"");
         return insert_data("INSERT INTO {$this->dbprefix}push_notifications_subscriptions (user_guid, client_id, service, device_id, token) VALUES (\"{$user->guid}\", \"{$client_id}\", \"{$service}\", \"{$device_id}\", \"{$token}\")");
+    }
+
+    public function removeSubscription(\ElggUser $user, $client_id, $service, $device_id) {
+        $client_id = mysql_real_escape_string($client_id);
+        $service = mysql_real_escape_string($service);
+        $device_id = mysql_real_escape_string($device_id);
+        return delete_data("DELETE FROM {$this->dbprefix}push_notifications_subscriptions WHERE user_guid = \"{$user->guid}\" AND client_id = \"{$client_id}\" AND service = \"{$service}\" AND device_id = \"{$device_id}\"");
     }
 
     public function incrementNotificationCount($user, $river) {
